# personal-website

./: .gitignore  Makefile  Procfile  pyproject.toml  requirements.txt
.github/actions/python-setup/: action.yaml
.github/workflows/: black.yaml  deploy_utils.py  heroku_deploy.yaml  pyright.yaml  workflow.yaml
api/: admin.py  models.py  tests.py  urls.py
api/serializers/: social_serializer.py
api/views/: get_social.py  index.py  social_view.py
personal_website/: asgi.py  settings.py  urls.py  wsgi.py
personalpage/: urls.py
personalpage/templates/: base.html  contacts.html  index.html
personalpage/templates/base/: base.html  navbar.html
personalpage/views/: contacts.py  index.py  views.py
templates/personalpage/: base.html  footer.html  navbar.html
