[tool.poetry]
name = "personal-website"
version = "0.1.0"
description = "First take on Django with personal page website"
authors = ["Algirdas Jauniskis <jauniskis.a@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
