[tool.poetry]
name = "personal-website"
version = "0.1.0"
description = "First take on Django with personal page website"
authors = ["Algirdas Jauniskis <jauniskis.a@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.6"
django-admin = "^2.0.1"
gunicorn = "^20.1.0"
djangorestframework = "^3.13.1"
psycopg2-binary = "^2.9.3"
whitenoise = "^6.2.0"
django-debug-toolbar = "^3.5.0"
fontawesomefree = "^6.1.1"
"backports.zoneinfo" = "^0.2.1"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
pyright = "^1.1.257"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
